--- a/package.json
+++ b/package.json
@@ -6,19 +6,24 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "ts": "tsc --noEmit"
+    "ts": "tsc --noEmit",
+    "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\""
   },
   "dependencies": {
     "@headlessui/react": "^1.7.15",
     "@heroicons/react": "^2.0.18",
     "@planetscale/database": "^1.7.0",
+    "@react-three/drei": "^9.80.2",
+    "@react-three/fiber": "^8.13.6",
     "@tremor/react": "^3.2.6",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
+    "@types/three": "^0.155.0",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
+    "d3-geo": "^3.1.0",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.5",
     "js-cookie": "^3.0.5",
@@ -33,6 +38,7 @@
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "tailwindcss": "^3.3.2",
+    "three-geojson-geometry": "^1.3.1",
     "typescript": "5.1.3"
   },
   "prettier": {
