--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,7 @@
   "tabWidth": 2,
   "useTabs": false,
   "arrowParens": "avoid",
-  "trailingComma": "es5"
+  "trailingComma": "es5",
+  "printWidth": 120,
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
