--- a/tsconfig.json
+++ b/tsconfig.json
@@ -29,9 +29,17 @@
       "@/app/*": ["app/*"],
       "@/styles/*": ["styles/*"],
       "@/utils/*": ["utils/*"],
-      "@/types/*": ["types/*"]
+      "@/types/*": ["types/*"],
+      "@/data/*": ["data/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "app/principals-geo-info.js",
+    "app/run-to-merge-reps-data.js"
+  ],
   "exclude": ["node_modules"]
 }
