--- a/package.json
+++ b/package.json
@@ -22,16 +22,16 @@
     "js-cookie": "^3.0.5",
     "kysely": "^0.25.0",
     "kysely-planetscale": "^1.3.0",
-    "next": "13.4.12",
+    "next": "14.2.5",
     "next-auth": "^4.22.1",
     "prop-types": "^15.8.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "rxjs": "^7.8.1",
     "server-only": "^0.0.1",
-    "three-geojson-geometry": "^1.3.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "three-geojson-geometry": "^1.3.1"
   },
   "prettier": {
     "arrowParens": "always",
@@ -40,13 +40,13 @@
     "trailingComma": "none"
   },
   "devDependencies": {
-    "eslint": "8.42.0",
-    "eslint-config-next": "13.4.5",
     "@types/js-cookie": "^3.0.3",
     "@types/node": "20.3.0",
     "@types/react": "18.2.11",
     "@types/react-dom": "18.2.4",
     "@types/three": "^0.155.0",
+    "eslint": "8.42.0",
+    "eslint-config-next": "14.2.5",
     "postcss": "^8.4.24",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.6.5",
