added live socket and updated network arc style

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,7 +30,10 @@
       "@/styles/*": ["styles/*"],
       "@/utils/*": ["utils/*"],
       "@/types/*": ["types/*"],
-      "@/data/*": ["data/*"]
+      "@/data/*": ["data/*"],
+      "@/api/*": ["api/*"],
+      "@/constants/*": ["constants/*"],
+      "@/providers/*": ["providers/*"]
     }
   },
   "include": [
