--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "private": true,
   "license": "MIT",
+  "sideEffects": false,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -16,8 +17,8 @@
     "@radix-ui/react-popover": "^1.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
-    "@react-three/drei": "^9.80.2",
-    "@react-three/fiber": "^8.13.6",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
     "@tremor/react": "^3.2.6",
     "@vercel/analytics": "^1.0.1",
     "autoprefixer": "^10.4.14",
@@ -25,11 +26,8 @@
     "clsx": "^2.1.1",
     "d3-geo": "^3.1.0",
     "js-cookie": "^3.0.5",
-    "kysely": "^0.25.0",
-    "kysely-planetscale": "^1.3.0",
     "lucide-react": "^0.414.0",
     "next": "14.2.5",
-    "next-auth": "^4.22.1",
     "prop-types": "^15.8.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
