add NEXT_PUBLIC_USE_SAMPLE_DATA for local dev

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,1 +1,4 @@
-# Nothing...
+# Private variables
+
+# Public variables
+NEXT_PUBLIC_USE_SAMPLE_DATA=true # Set to true to use sample data for development
