--- a/.env.local.example
+++ b/.env.local.example
@@ -2,3 +2,4 @@
 
 # Public variables
 NEXT_PUBLIC_USE_SAMPLE_DATA=true # Set to true to use sample data for development
+NEXT_PUBLIC_WS_URL=[Nano Websocket URL]
