wip - add support for Banano

--- a/.env.local.example
+++ b/.env.local.example
@@ -2,4 +2,14 @@
 
 # Public variables
 NEXT_PUBLIC_USE_SAMPLE_DATA=true # Set to true to use sample data for development
+
+
+# Nano
 NEXT_PUBLIC_WS_URL=[Nano Websocket URL]
+NEXT_PUBLIC_NANO_DONATION_ACCOUNT=[Nano Donation Account]
+
+# Banano
+NEXT_PUBLIC_BANANO_WS_URL=[Banano Websocket URL]
+NEXT_PUBLIC_BANANO_DONATION_ACCOUNT=[Banano Donation Account]
+
+
