--- a/.env.local.example
+++ b/.env.local.example
@@ -2,6 +2,8 @@
 
 # Public variables
 NEXT_PUBLIC_USE_SAMPLE_DATA=true # Set to true to use sample data for development
+NEXT_PUBLIC_SIMULATION_INTERVAL_MS=1000 # Set to the desired interval in milliseconds
+NEXT_PUBLIC_FRAME_RATE_DISPLAY=true # Set to true to display frame rate
 
 
 # Nano
